--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
 		"clean": "rimraf dist",
 		"lint": "tsc --noEmit && eslint \"src/**/*.ts\" --color",
 		"prettier": "prettier --write '{src,test,documentation}/**/*.{js,ts,json,html,xml,css,md}'",
-		"test": "ava",
 		"prebuild": "pnpm run clean",
 		"build": "pnpm run prebuild && pnpm run tsc",
-		"build:built_in_module_map": "ts-node script/generate-built-in-module-map.ts",
 		"prewatch": "pnpm run clean",
 		"watch": "pnpm run prewatch && pnpm run tsc -- --watch",
 		"tsc": "tsc -p tsconfig.build.json",
-		"preversion": "pnpm run lint && pnpm run build:built_in_module_map && pnpm run build",
+		"preversion": "pnpm run lint && pnpm run build",
 		"version": "pnpm run preversion && pnpm run generate:all && git add .",
 		"release": "np --no-cleanup --no-yarn",
-		"update:check": "pnpx npm-check-updates -x slash,typescript-* --dep dev,prod",
-		"update:commit": "pnpx npm-check-updates -u -x slash,typescript-* --dep dev,prod && pnpm update && pnpm install"
+		"update:check": "pnpx npm-check-updates --dep dev,prod",
+		"update:commit": "pnpx npm-check-updates -u --dep dev,prod && pnpm update && pnpm install"
 	},
 	"keywords": [
 		"typescript",
